--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap..https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&family=Satisfy&display=swap');
 
 body 
 {
